--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ionic-angular": "2.0.0-beta.4",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0-alpha.3",
+    "pouchdb": "^5.3.2",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "zone.js": "0.6.6"
